@@ -9,10 +9,25 @@ subprojects {
     // TODO: Expand to do more static checking in more projects
     if (project.name == "trafficReplayer" || project.name == "trafficCaptureProxyServer") {
         dependencies {
-            annotationProcessor group: 'com.google.errorprone', name: 'error_prone_core', version: '2.26.1'
+            annotationProcessor group: 'com.google.errorprone', name: 'error_prone_core', version: '2.32.0'
         }
         tasks.named('compileJava', JavaCompile) {
             if (project.name == "trafficReplayer" || project.name == "trafficCaptureProxyServer") {
+                options.fork = true
+                // Taken from https://errorprone.info/docs/installation
+                options.forkOptions.jvmArgs += [
+                    '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+                    '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+                    '--add-exports', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+                    '--add-exports', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+                    '--add-exports', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+                    '--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+                    '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                    '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+                    '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                    '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+                ]
+
                 options.compilerArgs += [
                         "-XDcompilePolicy=simple",
                         "-Xplugin:ErrorProne -XepDisableAllChecks -Xep:MustBeClosed:ERROR -XepDisableWarningsInGeneratedCode",
@@ -25,12 +40,6 @@ subprojects {
 allprojects {
     apply plugin: 'java'
     apply plugin: 'org.owasp.dependencycheck'
-
-    java {
-        toolchain {
-            languageVersion = JavaLanguageVersion.of(11)
-        }
-    }
 }
 
 subprojects {
